[package]
name = "float-bits"
version = "0.1.0"
edition = "2024"
authors = ["Donald King <chronos@chronos-tachyon.net>"]
license = "MIT"

[dependencies]
serde = { version = "1.0.219", optional = true, default-features = false, features = ["derive"] }

[features]
default = []
all = ["serde", "f16", "f128"]
serde = ["dep:serde"]
f16 = []
f128 = []
