[package]
name = "float-bits"
version = "0.1.0"
edition = "2024"
authors = ["Donald King <chronos@chronos-tachyon.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://codeberg.org/heptapodEnthusiast/float-bits"
repository = "https://codeberg.org/heptapodEnthusiast/float-bits"
documentation = "https://docs.rs/float-bits/latest/float_bits/"
categories = ["no-std::no-alloc", "rust-patterns"]
description = "Floats stored as raw bits, making them hashable and totally ordered."

[dependencies]
serde = { version = "1.0.219", optional = true, default-features = false, features = ["derive"] }

[features]
default = []
all = ["serde", "f16", "f128"]
serde = ["dep:serde"]
f16 = []
f128 = []
